--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.1",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@rxweb/reactive-form-validators": "^1.9.9-beta4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
